formatting and design

--- a/index.html
+++ b/index.html
@@ -13,50 +13,56 @@
       <h3>TODAY'S DATE</h3>
       <form action="">
       <p>
-        <label for="">PROMPT 1</label>
+        <label for="">What did I get done today?</label>
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
       <p>
-        <label for="">PROMPT 2</label>
+        <label for="">What am I grateful for?</label>
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
       <p>
-        <label for="">PROMPT 3</label>
+        <label for="">Did I exercise today?</label>
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
       <p>
-        <label for="">PROMPT 4</label>
+        <label for="">How much money did I spend today?</label>
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
       <p>
-        <label for="">PROMPT 5</label>
+        <label for="">What challenges did I face today?</label>
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
       <p>
-        <label for="">PROMPT 6</label>
+        <label for="">What goals do I have for tomorrow?</label>
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
-      <p>
-        <label for="">PROMPT 7</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
-      </p>
-      <p>
-        <label for="">PROMPT 8</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
-      </p>
-      <p>
-        <label for="">PROMPT 9</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
-      </p>
+      <group class="inline-radio">
+        <p>
+          <label>
+            <input type="radio" name="mood" value="bad">
+            <img src="images/bad.png" alt="bad"/>
+          </label>
+          <label>
+            <input type="radio" name="mood" value="fine"> 
+            <img src="images/fine.png" alt="fine"/>
+          </label>    
+          <label>
+            <input type="radio" name="mood" value="okay">
+            <img src="images/okay.png" alt="okay"/>
+          </label>       
+          <label>
+            <input type="radio" name="mood" value="good"> 
+            <img src="images/good.png" alt="good"/>
+          </label>  
+          <label>
+            <input type="radio" name="mood" value="great">
+            <img src="images/great.png" alt="great"/>
+          </label>         
+        </p>
+      </group>
       <p>
         <button>Submit Today's Journal</button>
       </p>
     </form>   
   </body>
-  </br> </br> 
-  <footer>
-    <p> </p>
-    <p>Website by Emma Prager</p>
-    <a href='https://pngtree.com/so/post it notes'>post it notes png from pngtree.com</a>
-  </footer>
 </html>
