add js for date

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>Journal</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <link rel="shortcut icon" href="images/icon.png" type="image/ico"/>
-    <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Palanquin:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="form">
-      <h3>TODAY'S DATE</h3>
+      <h1 id="thedate"></h1>
       <form action="">
       <p>
         <label for="">What did I get done today?</label>
@@ -21,7 +23,7 @@
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
       <p>
-        <label for="">Did I exercise today?</label>
+        <label for="">Did I do any self-care today?</label>
         <textarea name="" id="" cols="30" rows="7"></textarea>
       </p>
       <p>
