--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
   </head>
   <body>
+    <h3><a href="history.html">JOURNAL HISTORY</a></h3>
     <div class="form">
       <h1 id="thedate"></h1>
       <form action="">
