--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
       <h1 id="thedate"></h1>
       <form action="">
       <p>
-        <label for="">What did I get done today?</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
-      </p>
-      <p>
-        <label for="">What am I grateful for?</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
-      </p>
-      <p>
-        <label for="">Did I do any self-care today?</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
-      </p>
-      <p>
-        <label for="">How much money did I spend today?</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
+        <label for="">What happened today?</label>
+        <textarea name="" id="" cols="30" rows="7" placeholder="Type here . . ."></textarea>
       </p>
       <p>
         <label for="">What challenges did I face today?</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
+        <textarea name="" id="" cols="30" rows="7" placeholder="Type here . . ."></textarea>
+      </p>
+      <p>
+        <label for="">How did I take care of myself today?</label>
+        <textarea name="" id="" cols="30" rows="7" placeholder="Type here . . ."></textarea>
+      </p>
+      <p>
+        <label for="">What am I grateful for?</label>
+        <textarea name="" id="" cols="30" rows="7" placeholder="Type here . . ."></textarea>
+      </p>
+      <p>
+        <label for="">Do I have any other thoughts about today?</label>
+        <textarea name="" id="" cols="30" rows="7" placeholder="Example: How much money did I spend today?"></textarea>
       </p>
       <p>
         <label for="">What goals do I have for tomorrow?</label>
-        <textarea name="" id="" cols="30" rows="7"></textarea>
+        <textarea name="" id="" cols="30" rows="7" placeholder="Type here . . ."></textarea>
       </p>
       <group class="inline-radio">
         <p>
