improve style and formatting

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Journal</title>
+    <title id="thedateTitle"></title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="images/icon.png" type="image/ico"/>
@@ -13,7 +13,7 @@
   <body>
     <h3><a href="history.html">JOURNAL HISTORY</a></h3>
     <div class="form">
-      <h1 id="thedate"></h1>
+      <h1 id="thedateHeading"></h1>
       <form action="">
       <p>
         <label for="">What happened today?</label>
