--- a/history.html
+++ b/history.html
@@ -2,17 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Journal History</title>
+    <title>Emma's Journal</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="images/icon.png" type="image/ico"/>
     <link href="https://fonts.googleapis.com/css?family=Palanquin:300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
   </head>
   <body>
     <h3><a href="index.html">NEW ENTRY</a></h3>
     <div class="history">
+      <h2>Emma's Journal</h2>
       <h1>DATE</h1>
       <p><a href="index.html">EDIT</a> | <a href="history.html">DELETE</a></p> 
       <p><i>What happened today? : </i> <b>RESPONSE</b> </p>
