history page heading

--- a/history.html
+++ b/history.html
@@ -14,7 +14,7 @@
   <body>
     <h3><a href="index.html">NEW ENTRY</a></h3>
     <div class="history">
-      <h2>Emma's Journal</h2>
+        <h2><span>Emma's Journal</span></h2>
       <h1>DATE</h1>
       <p><a href="index.html">EDIT</a> | <a href="history.html">DELETE</a></p> 
       <p><i>What happened today? : </i> <b>RESPONSE</b> </p>
