remove unecessary code from UI demo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Palanquin:300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
   <body>
-    <h3><a href="history.html" onclick="displayAllProducts()">JOURNAL HISTORY</a></h3>
+    <h3><a href="history.html">JOURNAL HISTORY</a></h3>
     <div class="form">
-      <h1 id="thedateHeading"></h1>
-
-        
+      <h1 id="thedateHeading"></h1>  
     </form>
       <form id="prodCreate" action="#">
       <p>
@@ -68,7 +65,7 @@
         </p>
       </group>
       <p>
-        <button onclick="postProduct();">Submit Today's Journal</button>
+        <button>Submit Today's Journal</button>
       </p>
     </form>   
   </body>
